--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,5 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,600;1,300&family=Noto+Serif+SC:wght@200;600;900&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,600;1,300&family=Noto+Serif+SC:wght@200;600;900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* blur support*/
+/* backdrop */
+.bd-blur {
+  backdrop-filter: blur(8px);
+}
+
+.bd-none {
+  backdrop-filter: none;
+}
+
+/* element */
+.e-blur {
+  filter: blur(8px);
+}
+
+.e-blur-none {
+  filter: none;
+}
